# latlng2minecraft

./: .gitignore  AGENTS.md  LICENSE  README.md
.devcontainer/: devcontainer.json
kakiko2minecraft/: README.md  pyproject.toml
kakiko2minecraft/src/kakiko2minecraft/: __init__.py  __main__.py  consts.py  converter.py  types.py
kakiko2minecraft/tests/: test_converter.py
latlng2minecraft/: README.md  pyproject.toml
latlng2minecraft/src/latlng2minecraft/: __init__.py  __main__.py  consts.py  converter.py  core.py  types.py
latlng2minecraft/tests/: test_converter.py
