[project]
name = "kakiko2minecraft"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Minto312", email = "karinto3219@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.14.1",
    "pyrefly>=0.37.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kakiko2minecraft"]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D203", "D212", "COM812", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.rye.scripts]
format = "ruff format"
lint = "ruff check --fix"
fix = ["sh", "-c", "ruff format && ruff check --fix"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
kakiko2minecraft = "kakiko2minecraft.__main__:main"
